# SudoDev

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt  setup_trigger.json
containers/: backend.Dockerfile  frontend.Dockerfile
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentView.tsx  Input.tsx  Results.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx  index.ts
frontend/lib/: api.ts
src/sudodev/: client.py  tools.py
sudodev/core/: cache_manager.py  context_search.py  improved_agent.py  prompts.py  unified_agent.py
sudodev/runtime/: container.py  github_sandbox.py
sudodev/server/: __init__.py  main.py  models.py
sudodev/server/routes/: __init__.py  agent.py
tests/: test.py  test_github.py  test_github_issues.py
