[project]
name = "sudodev"
version = "0.2.0"
description = "code fixing agent"
authors = [
    {name = "akshitguptaa",email = "akshitguptaa29@gmail.com"}
]
license = {text = "Apache-2.0"}
license-file = "LICENSE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.0.0",
    "websockets>=12.0"
]

[dependency-groups]
dev = [
    "docker (>=7.1.0,<8.0.0)",
    "groq (>=0.37.1,<0.38.0)",
    "datasets (>=4.4.1,<5.0.0)"
]

[project.scripts]
sudodev-server = "sudodev.server.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["."]
include = ["sudodev*"]
